2002-06-15  Roland McGrath  <roland@frob.com>

	* setup.c (page_write_file_direct): Use proper type for result param
	of device_write.

2002-03-23  Roland McGrath  <roland@frob.com>

	* setup.c (default_pager_paging_storage): Fail if receiver port is not
	default_pager_default_port.

	* Makefile (OBJS): Add default_pager_replyUser.o here.

	* main.c (default_pager_bootstrap_port): Declaration removed.
	(main): Don't use it.
	* Makefile (OBJS): Remove bootstrapServer.o from here.

2001-06-05  Mark Kettenis  <kettenis@gnu.org>

	* setup.c (page_read_file_direct): Fix logic to find the run that
	contains the data to be read.  Use size in bytes instead of blocks
	when calling device_read.
	(page_write_file_direct): Fix logic to find the run that contains
	the data to be written.  Pass SIZE_WRITTEN to device_write call
	instead of &WROTE when writing a whole page.  Correctly calculate
	SEGSIZE.

2001-02-28  Roland McGrath  <roland@frob.com>

	* main.c (main): Instead of calling daemon, do the work ourselves but
	synchronize with the child so that vm_set_default_memory_manager has
	definitely been called before exit.
	(nohandler): New function.

2000-12-28  Roland McGrath  <roland@frob.com>

	Override the shared code from serverboot for device access with
	a new, simpler implementation with no filesystem format support.
	The new code implements the new default_pager_paging_storage RPC
	to set up paging areas that can be subsets of whole Mach devices,
	with no Linux signature checking.  The compatibility setup entry
	point works as before on whole devices.
	* setup.c, file_io.h: New files.
	* Makefile (SRCS): Remove def_pager_setup.c, file_io.c, strfcns.c,
	ext2_file_io.c, ffs_file_io.c, ffs_compat.c, minix_file_io.c,
	minix_ffs_compat.c; add setup.c to replace them all.

2000-02-06  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile: Move include ../Makeconf earlier, since it sets srcdir.

1999-11-18  Roland McGrath  <roland@baalperazim.frob.com>
